add validation to form data
validation rule on model
display error in controller and view